--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "lingua-ping-webpush",
   "version": "1.0.0",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
-    "express": "^4.19.2",
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.2",
+    "express": "^4.19.2",
     "pg": "^8.12.0",
     "web-push": "^3.6.7"
+  },
+  "devDependencies": {
+    "chokidar": "^4.0.3",
+    "nodemon": "^3.1.10"
   }
 }
