--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev-express": "nodemon server.js"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "body-parser": "^1.20.2",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
