--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "start:http": "DISABLE_HTTPS=true node server.js",
     "dev-express": "nodemon server.js"
   },
   "dependencies": {
