--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev-express": "nodemon server.js"
   },
   "dependencies": {
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
+    "@capacitor/push-notifications": "^7.0.3",
     "@neondatabase/serverless": "^1.0.1",
     "body-parser": "^1.20.2",
     "dotenv": "^17.2.2",
