--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "body-parser": "^1.20.2",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
+    "node-apn": "^3.0.0",
     "pg": "^8.12.0",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
     "chokidar": "^4.0.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "typescript": "^5.0.0"
   }
 }
