--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "lingua-push-ios",
+  "name": "lingua-ping-webpush",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start:http": "DISABLE_HTTPS=true node server.js",
+    "dev-express": "nodemon server.js"
   },
   "dependencies": {
     "@capacitor/cli": "^7.4.3",
@@ -16,9 +17,11 @@
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "node-apn": "^3.0.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "chokidar": "^4.0.3",
     "nodemon": "^3.1.10",
     "typescript": "^5.0.0"
   }
